Pin requirements versions for a more stable environment.

--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -1,2 +1,5 @@
-#Put requirements here to have a consistent environment for everyone if necessary.
-django-debug-toolbar
+# Put requirements here to have a consistent environment for everyone.
+django-debug-toolbarasgiref==3.6.0
+Django==4.1.7
+django_debug_toolbar==3.8.1
+sqlparse==0.4.3
