--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -1,4 +1,6 @@
 # Put requirements here to have a consistent environment for everyone.
+crispy-bootstrap5==0.7
 Django==4.1.7
+django-crispy-forms==2.0
 django_debug_toolbar==3.8.1
 sqlparse==0.4.3
