--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -4,4 +4,6 @@ django_debug_toolbar==3.8.1
 Django==3.2.8
 pytz==2022.7.1
 sqlparse==0.4.3
-pysqlite3-binary
+#Not installable by pip
+#pysqlite3-binary
+python-dotenv==0.21.1
