--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -5,5 +5,5 @@ Django==3.2.8
 pytz==2022.7.1
 sqlparse==0.4.3
 #Not installable by pip
-#pysqlite3-binary
+pysqlite3-binary==0.5.0
 python-dotenv==0.21.1
