--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -1,8 +1,11 @@
+asgiref==3.6.0
+black==23.1.0
+coverage==7.2.1
 crispy-bootstrap5==0.7
+Django==3.2.8
 django-crispy-forms==2.0
 django_debug_toolbar==3.8.1
-Django==3.2.8
+flake8==5.0.4
+python-dotenv==0.21.1
 pytz==2022.7.1
 sqlparse==0.4.3
-python-dotenv==0.21.1
-
