--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -1,7 +1,25 @@
+aiodns==3.0.0
+aiosmtpd==1.4.4.post2
+asgiref==3.6.0
+atpublic==3.1.1
+attrs==22.2.0
+boto3==1.26.84
+botocore==1.29.84
+cffi==1.15.1
 crispy-bootstrap5==0.7
+Django==4.0
 django-crispy-forms==2.0
+django-ses==3.3.0
+Django-Verify-Email==2.0.3
+django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
-Django==3.2.8
+jmespath==1.0.1
+pycares==4.3.0
+pycparser==2.21
+python-dateutil==2.8.2
 pytz==2022.7.1
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.3
-pysqlite3-binary
+urllib3==1.26.14
+verify-email==2.4.3
