--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Check Python Format with Black
         run: black --check .
       - name: Lint Python with Flake8
-        run: flake8 --filename=*.py --exclude=*_initial.py --max-line-length 100 --ignore=F401 .
+        run: flake8 --filename=*.py --exclude=test_*,*_initial.py --max-line-length 100 --ignore=F401 .
       - name: Execute Python Django Test Cases
         run: python manage.py test
       - name: Check Test Coverage
