Add AWS deployment
Added password reset functionality for localhost

Added AWS SES

"Deleted migrations and refreshed db"

add flack8 file

Added tests for profile models, forms and views, Made recommended changes after PR review

Update requirements.txt

Update requirements.txt

reformatted files

Deleted unnecessary files

Updated profiles.py

reformatting

fix db and requirements

Revert attepmt at actions

Bump the credential lease time

Use v2 of aws credentials action

Update role to assume to actual role

Try deploying with eb.

Add application during eb init

Use ref instead of head ref for version

Use ref_name for versioning

Remove version during deployment

Try moving environment prep to standalone action

Break out actions

Try deploying with a per env credential

Fix up the coveralls action

Update deploy action

Break out eb cli install

Add platform to eb init

Update version for eb deploy

Deploy from voluncheer directory

Remove hard coded addresses

Testing aws credentials

Revert attepmt at actions

Bump the credential lease time

Use v2 of aws credentials action

Update role to assume to actual role

Try deploying with eb.

Add application during eb init

Use ref instead of head ref for version

Use ref_name for versioning

Remove version during deployment

Try moving environment prep to standalone action

Break out actions

Try deploying with a per env credential

Fix up the coveralls action

Update deploy action

Break out eb cli install

Add platform to eb init

Update version for eb deploy

Deploy from voluncheer directory

Remove hard coded addresses

--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -13,6 +13,8 @@ on:
 
 env:
   MINIMUM_COVERAGE: 70
+  APP_NAME: "voluncheer"
+  AWS_REGION: us-east-1
 
 defaults:
   run:
@@ -23,6 +25,14 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.actor }}-${{ github.ref_name }}
   cancel-in-progress: true
 
+permissions:
+  id-token: write
+  contents: read
+
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   format-lint-test:
     name: Checks format, lints, runs tests, and checks coverage
@@ -30,27 +40,16 @@ jobs:
     steps:
       - name: Checkout Code Locally
         uses: actions/checkout@v3
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.7
-          cache: pip
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
-      - name: Check Python Format with Black
-        run: black --check .
-      - name: Lint Python with Flake8
-        run: flake8 --filename=*.py --exclude=test_*,*_initial.py --max-line-length 100 --ignore=F401 .
-      - name: Execute Python Django Test Cases
-        run: python manage.py test
-      - name: Check Test Coverage
-        run: |
-          coverage run --source "." manage.py test
-          coverage lcov --fail-under=${MINIMUM_COVERAGE}
-      - name: Report Coverage to Coveralls
+      - name: Prepare Environment
+        uses: ./.github/actions/prepare
+      - name: Format and Lint Python
+        uses: ./.github/actions/format
+      - name: Test Python
+        uses: ./.github/actions/test
+      - name: Deploy to AWS
+        # Only deploy when a PR on develop and/or main has been merged.
+        # if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == true }}
         if: ${{ success() }}
-        uses: coverallsapp/github-action@v1
+        uses: ./.github/actions/deploy
         with:
-          base-path: voluncheer
-          github-token: ${{ github.token }}
-          path-to-lcov: voluncheer/coverage.lcov
+          app-name: voluncheer
