--- a/voluncheer/.gitignore
+++ b/voluncheer/.gitignore
@@ -1,5 +1,16 @@
+.idea/
+**/.idea/
+.DS_Store
+**/.DS_Store
+__pycache__/
+**/__pycache__/
+voluncheer/db.sqlite3
+**/.coverage
+**/coverage.lcov
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
 .env
+
