--- a/.github/actions/format/action.yml
+++ b/.github/actions/format/action.yml
@@ -8,4 +8,4 @@ runs:
       run: black --check ./voluncheer
     - name: Lint Python with Flake8
       shell: bash
-      run: flake8 --filename=*.py --exclude=*_initial.py --max-line-length 100 --ignore=F401 ./voluncheer
+      run: flake8 --filename=*.py --exclude=*/migrations/*,*_initial.py --max-line-length 100 --ignore=F401 ./voluncheer
