Add flake8 and black configuration files, add to vscode, and format repo.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,16 @@
 {
-    "python.linting.pylintEnabled": false,
-    "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true,
-    "[python]": {
-      "editor.defaultFormatter": "ms-python.black-formatter",
-      "editor.formatOnSave": true
-    }
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": true,
+  "python.linting.enabled": true,
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true
+  },
+  "black-formatter.args": [
+    "--config",
+    "voluncheer/pyproject.toml"
+  ],
+  "flake8.args": [
+    "--rcfile=voluncheer/.flake8"
+  ]
 }
