--- a/.github/actions/format/action.yml
+++ b/.github/actions/format/action.yml
@@ -5,7 +5,9 @@ runs:
   steps:
     - name: Check Python Format with Black
       shell: bash
-      run: black --check ./voluncheer
+      working-directory: voluncheer
+      run: black --check .
     - name: Lint Python with Flake8
       shell: bash
-      run: flake8 --filename=*.py --exclude=*/migrations/*,*_initial.py --max-line-length 100 --ignore=F401 ./voluncheer
+      working-directory: voluncheer
+      run: flake8 .
