--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -7,32 +7,24 @@ black==23.1.0
 boto3==1.26.84
 botocore==1.29.84
 cffi==1.15.1
-click==8.1.3
 crispy-bootstrap5==0.7
+coverage==7.2.1
 Django==3.2.8
 django-crispy-forms==2.0
 django-ses==3.3.0
 Django-Verify-Email==2.0.3
 django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
-flake8==6.0.0
+flake8==5.0.4
 jmespath==1.0.1
-mccabe==0.7.0
-mypy-extensions==1.0.0
-packaging==23.0
-pathspec==0.11.0
-Pillow==9.4.0
-platformdirs==3.1.1
 pycares==4.3.0
-pycodestyle==2.10.0
 pycparser==2.21
-pyflakes==3.0.1
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv==0.21.1
 pytz==2022.7.1
 s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.3
-tomli==2.0.1
 urllib3==1.26.14
 verify-email==2.4.3
+Pillow==9.3.0
