--- a/voluncheer/pyproject.toml
+++ b/voluncheer/pyproject.toml
@@ -9,6 +9,9 @@ extend-exclude = '''
 
 [tool.isort]
 profile = "black"
-skip_gitignore = true
-line_length = 100
 force_single_line = true
+force_sort_within_sections = true
+group_by_package = true
+lexicographical = true
+line_length = 100
+skip_gitignore = true
