Add isort configuration to vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,9 @@
   ],
   "flake8.args": [
     "--rcfile=voluncheer/.flake8"
-  ]
+  ],
+  "isort.args": [
+    "--config",
+    "voluncheer/pyproject.toml"
+  ],
 }
