--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -18,6 +18,7 @@ django_debug_toolbar==3.8.1
 flake8==5.0.4
 isort==5.11.5
 jmespath==1.0.1
+Pillow==9.3.0
 pycares==4.3.0
 pycparser==2.21
 python-dateutil==2.8.2
