--- a/voluncheer/pyproject.toml
+++ b/voluncheer/pyproject.toml
@@ -6,3 +6,13 @@ extend-exclude = '''
   migrations/*
 )
 '''
+
+[tool.isort]
+profile = "black"
+force_single_line = true
+force_sort_within_sections = true
+group_by_package = true
+lexicographical = true
+line_length = 100
+skip_gitignore = true
+skip_glob = ["*/migrations/**"]
