--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -16,7 +16,9 @@ Django-Verify-Email==2.0.3
 django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
 flake8==5.0.4
+isort==5.11.5
 jmespath==1.0.1
+Pillow==9.3.0
 pycares==4.3.0
 pycparser==2.21
 python-dateutil==2.8.2
@@ -27,4 +29,3 @@ six==1.16.0
 sqlparse==0.4.3
 urllib3==1.26.14
 verify-email==2.4.3
-Pillow==9.3.0
