Setup PostgreSQL for GitHub Actions and Production environments
Setup PostgreSQL for GitHub Actions and Production environments

Attempt to use PostgreSQL in GitHub Actions CI

Add postgres specific environment variables

Add psycopg2 to requirements

Add clearing and reseting ENVIRONMENT_TYPE during tests

Try retrieving user objects using pk directly

Try using pk instead of ID

Use setup instead of cls setup for opportunityboard tests

Set psycopg2 version in requirements

Add PostgreSQL setup to the CD and Post Submit workflows

Add django migrations when deploying to AWS

Add psycopg version

Update coveralls to use the v2 action (#124)

added delete button and save progress when update (#121)

* added delete button and save progress when update

* fix linting

* bugfix: change url to re_path for django>=4.0

* Fixed the domain  (#122)

* Fixed domain for localhost

* Fixed domain for localhost

* Fixed domain for localhost

* Fixed domain for localhost

* Fixed domain for localhost

* Fixed domain for localhost

* Fixed domain for localhost

* added delete button and save progress when update

* formatting changes

* Subcategories (#101)

* Sub- and Subsub-categories added

* Fixed issue with subsubcategories

* Adding db and migration to commit

* Fixed flake8 formatting

* Fixed import sorting

* Fixed import sorting again

* Fixed opportunity models test

* Added additional models tests

* Removed choices list from opportunity model

* Fixed typos in opportunity and reverted settings

* Added all categories to db and fixed form bug

* Merged migrations

* Adjusted test_forms

* fixed bug with subsubcats

* fixed opportunity update and subcats

* fixed flake8 issues

* fixed isort issues

* fixed test

* Changes made after code review

* added delete button and save progress when update

* formatting changes

* revert linting change

* migrations

* test passed. Now fix no profile photo opportunity bug

* fix formatting issue and no photo bug for org

* done

--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -17,3 +17,9 @@ runs:
       shell: bash
       working-directory: voluncheer
       run: pip install -r requirements.txt
+    - name: Database Migrations
+      shell: bash
+      working-directory: voluncheer
+      run: |
+        python manage.py makemigrations
+        python manage.py migrate
