--- a/.github/workflows/merge_deploy.yml
+++ b/.github/workflows/merge_deploy.yml
@@ -18,10 +18,32 @@ permissions:
   id-token: write
   contents: read
 
+env:
+  ENVIRONMENT_TYPE: continuous_integration
+  POSTGRES_DB: postgres-test-db
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_HOST: localhost
+  POSTGRES_PORT: 5432
+
 jobs:
   test-and-deploy:
     name: Test and Deploy
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: postgres-test-db
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout Code Locally
         uses: actions/checkout@v3
