--- a/.github/workflows/post_submit.yml
+++ b/.github/workflows/post_submit.yml
@@ -10,10 +10,32 @@ defaults:
     shell: bash
     working-directory: voluncheer
 
+env:
+  ENVIRONMENT_TYPE: continuous_integration
+  POSTGRES_DB: postgres-test-db
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_HOST: localhost
+  POSTGRES_PORT: 5432
+
 jobs:
   format-lint-and-test:
     name: Post-Submit Continuous Integration
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: postgres-test-db
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout Code Locally
         uses: actions/checkout@v3
