--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -16,10 +16,32 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.actor }}-${{ github.ref_name }}
   cancel-in-progress: true
 
+env:
+  ENVIRONMENT_TYPE: continuous_integration
+  POSTGRES_DB: postgres-test-db
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_HOST: localhost
+  POSTGRES_PORT: 5432
+
 jobs:
-  format-lint-and-test:
+  presubmit:
     name: Continuous Integration
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: postgres-test-db
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Checkout Code Locally
         uses: actions/checkout@v3
