--- a/voluncheer/.ebextensions/django.config
+++ b/voluncheer/.ebextensions/django.config
@@ -1,3 +1,7 @@
+container_commands:
+  01_migrate:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate"
+    leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: voluncheer.settings
@@ -6,4 +10,3 @@ option_settings:
     WSGIPath: voluncheer.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
-
