--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -19,6 +19,7 @@ flake8==5.0.4
 isort==5.11.5
 jmespath==1.0.1
 Pillow==9.3.0
+psycopg2-binary==2.9.5
 pycares==4.3.0
 pycparser==2.21
 python-dateutil==2.8.2
