Add durable media storage for production environments (S3)

--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -12,6 +12,7 @@ coverage==7.2.1
 Django==3.2.8
 django-crispy-forms==2.0
 django-ses==3.3.0
+django-storages==1.13.2
 Django-Verify-Email==2.0.3
 django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
