--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -12,6 +12,7 @@ coverage==7.2.1
 Django==3.2.8
 django-crispy-forms==2.0
 django-ses==3.3.0
+django-storages==1.13.2
 Django-Verify-Email==2.0.3
 django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
@@ -19,6 +20,7 @@ flake8==5.0.4
 isort==5.11.5
 jmespath==1.0.1
 Pillow==9.3.0
+psycopg2-binary==2.9.5
 pycares==4.3.0
 pycparser==2.21
 python-dateutil==2.8.2
