--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -23,3 +23,4 @@ runs:
       run: |
         python manage.py makemigrations
         python manage.py migrate
+        python manage.py loaddata opportunityboard/fixtures/category_data.json
