--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -26,6 +26,7 @@ pycparser==2.21
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 pytz==2022.7.1
+requests==2.28.2
 s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.3
