Update post submit testing to reflect the proper branch (main).

--- a/.github/workflows/post_submit.yml
+++ b/.github/workflows/post_submit.yml
@@ -1,5 +1,5 @@
 name: Post-Submit Continuous Integration
-run-name: ${{ github.workflow }} in ${{ github.ref_name }}
+run-name: ${{ github.workflow }} in main
 
 on:
   schedule:
