--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -23,3 +23,9 @@ runs:
       run: |
         python manage.py makemigrations
         python manage.py migrate
+    - name: spin up redis with docker
+      shell: bash
+      working-directory: voluncheer
+      run: |
+        sudo apt-get install docker-engine
+        docker run -p 6379:6379 -d redis:5
