--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -19,6 +19,7 @@ Django-Verify-Email==2.0.3
 django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
 flake8==5.0.4
+freezegun==1.2.2
 isort==5.11.5
 jmespath==1.0.1
 Pillow==9.3.0
