--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -7,6 +7,8 @@ black==23.1.0
 boto3==1.26.84
 botocore==1.29.84
 cffi==1.15.1
+channels==3.0.4
+channels_redis==3.3.1
 crispy-bootstrap5==0.7
 coverage==7.2.1
 Django==3.2.8
@@ -17,6 +19,7 @@ Django-Verify-Email==2.0.3
 django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
 flake8==5.0.4
+freezegun==1.2.2
 isort==5.11.5
 jmespath==1.0.1
 Pillow==9.3.0
