--- a/voluncheer/.ebextensions/django.config
+++ b/voluncheer/.ebextensions/django.config
@@ -5,6 +5,9 @@ container_commands:
   02_pull_data:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py pull_nyc_charities"
     leader_only: true
+  03_load_categories:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py load_categories"
+    leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: voluncheer.settings
