--- a/voluncheer/.ebextensions/django.config
+++ b/voluncheer/.ebextensions/django.config
@@ -8,6 +8,9 @@ container_commands:
   03_load_categories:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py load_categories"
     leader_only: true
+  04_load_badges:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py load_badge_data"
+    leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: voluncheer.settings
