--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -11,6 +11,7 @@ channels==3.0.4
 channels_redis==3.3.1
 crispy-bootstrap5==0.7
 coverage==7.2.1
+daphne==3.0.2
 Django==3.2.8
 django-crispy-forms==2.0
 django-mathfilters==1.0.0
