use infrastructure as code for everything. Need to replace Redis Channel ID later

--- a/voluncheer/.ebextensions/django.config
+++ b/voluncheer/.ebextensions/django.config
@@ -26,3 +26,10 @@ option_settings:
     WSGIPath: voluncheer.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
+  aws:elbv2:listenerrule:ws:
+    PathPatterns: /ws/*
+    Process: websocket
+    Priority: 1
+  aws:elasticbeanstalk:environment:process:websocket:
+    Port: '5000'
+    Protocol: HTTP
