--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -23,6 +23,7 @@ django_debug_toolbar==3.8.1
 flake8==5.0.4
 freezegun==1.2.2
 geopy==2.3.0
+gunicorn==20.0.4
 isort==5.11.5
 jmespath==1.0.1
 Pillow==9.3.0
