--- a/voluncheer/.ebextensions/django.config
+++ b/voluncheer/.ebextensions/django.config
@@ -26,6 +26,10 @@ option_settings:
     WSGIPath: voluncheer.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
+  aws:elbv2:listener:443:
+    ListenerEnabled: 'true'
+    Protocol: HTTP
+    Rules: ws
   aws:elbv2:listenerrule:ws:
     PathPatterns: /ws/*
     Process: websocket
