--- a/voluncheer/requirements.txt
+++ b/voluncheer/requirements.txt
@@ -21,6 +21,7 @@ django-widget-tweaks==1.4.12
 django_debug_toolbar==3.8.1
 flake8==5.0.4
 freezegun==1.2.2
+geopy==2.3.0
 isort==5.11.5
 jmespath==1.0.1
 Pillow==9.3.0
