--- a/voluncheer/.ebextensions/01_django.config
+++ b/voluncheer/.ebextensions/01_django.config
@@ -26,7 +26,8 @@ option_settings:
     WSGIPath: voluncheer.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
-  aws:elbv2:listener:443:
+  aws:elbv2:listener:80:
+    DefaultProcess: http
     ListenerEnabled: 'true'
     Protocol: HTTP
     Rules: ws
@@ -34,6 +35,10 @@ option_settings:
     PathPatterns: /ws/*
     Process: websocket
     Priority: 1
+  aws:elasticbeanstalk:environment:process:http:
+    Port: '80'
+    Protocol: HTTP
   aws:elasticbeanstalk:environment:process:websocket:
     Port: '5000'
     Protocol: HTTP
+  
