--- a/voluncheer/.ebextensions/django.config
+++ b/voluncheer/.ebextensions/django.config
@@ -14,7 +14,7 @@ container_commands:
   05_remove_old_archive_cron:
     command: "rm -f /etc/cron.d/archive_opportunities"
   06_create_archive_cron:
-    command: "echo '0 0 * * * root source /var/app/venv/*/bin/activate && python3 manage.py archive_opportunities' > /etc/cron.d/archive_opportunities"
+    command: "echo '0 * * * * root source /var/app/venv/*/bin/activate && python3 manage.py archive_opportunities' > /etc/cron.d/archive_opportunities"
   07_set_archive_permissions:
     command: "chmod 644 /etc/cron.d/archive_opportunities"
 
