--- a/voluncheer/.ebextensions/01_django.config
+++ b/voluncheer/.ebextensions/01_django.config
@@ -17,7 +17,9 @@ container_commands:
     command: "echo '*/10 * * * * root source /var/app/venv/*/bin/activate && python3 manage.py archive_opportunities' > /etc/cron.d/archive_opportunities"
   07_set_archive_permissions:
     command: "chmod 644 /etc/cron.d/archive_opportunities"
-
+  08_wsgipass:
+    command: 'echo "WSGIPassAuthorization On" >> ../wsgi.conf'
+    
 option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: voluncheer.settings
