--- a/voluncheer/.ebextensions/01_django.config
+++ b/voluncheer/.ebextensions/01_django.config
@@ -17,6 +17,9 @@ container_commands:
     command: "echo '*/10 * * * * root source /var/app/venv/*/bin/activate && python3 manage.py archive_opportunities' > /etc/cron.d/archive_opportunities"
   07_set_archive_permissions:
     command: "chmod 644 /etc/cron.d/archive_opportunities"
+  08_wsgipass:
+    command: 'echo "WSGIPassAuthorization On" >> ../wsgi.conf'
+    
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
@@ -26,3 +29,20 @@ option_settings:
     WSGIPath: voluncheer.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
+  aws:elbv2:listener:80:
+    DefaultProcess: http
+    ListenerEnabled: 'true'
+    Protocol: HTTP
+    Rules: ws
+  aws:elbv2:listenerrule:ws:
+    PathPatterns: /ws/*
+    Process: websocket
+    Priority: 1
+  aws:elasticbeanstalk:environment:process:http:
+    Port: '80'
+    Protocol: HTTP
+  aws:elasticbeanstalk:environment:process:websocket:
+    Port: '5000'
+    Protocol: HTTP
+  
+
