--- a/voluncheer/Procfile
+++ b/voluncheer/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn --bind :8000 --workers 3 --threads 2 voluncheer.wsgi:application
-websocket: daphne -b 0.0.0.0 -p 5000 voluncheer.asgi:application
+web: source /var/app/venv/*/bin/activate && gunicorn --bind :8000 --workers 3 --threads 2 voluncheer.wsgi:application
+websocket: source /var/app/venv/*/bin/activate && daphne -b 0.0.0.0 -p 5000 voluncheer.asgi:application
