add back port 80

--- a/voluncheer/.ebextensions/01_django.config
+++ b/voluncheer/.ebextensions/01_django.config
@@ -38,6 +38,9 @@ option_settings:
     PathPatterns: /ws/*
     Process: websocket
     Priority: 1
+  aws:elasticbeanstalk:environment:process:http:
+     Port: '80'
+     Protocol: HTTP
   aws:elasticbeanstalk:environment:process:websocket:
     Port: '5000'
     Protocol: HTTP
