Change http to default

--- a/voluncheer/.ebextensions/01_django.config
+++ b/voluncheer/.ebextensions/01_django.config
@@ -30,7 +30,7 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
   aws:elbv2:listener:80:
-    DefaultProcess: http
+    DefaultProcess: default
     ListenerEnabled: 'true'
     Protocol: HTTP
     Rules: ws
@@ -38,7 +38,7 @@ option_settings:
     PathPatterns: /ws/*
     Process: websocket
     Priority: 1
-  aws:elasticbeanstalk:environment:process:http:
+  aws:elasticbeanstalk:environment:process:default:
      Port: '80'
      Protocol: HTTP
   aws:elasticbeanstalk:environment:process:websocket:
