fixed typo in cron job

--- a/voluncheer/.ebextensions/03_archive_cron.config
+++ b/voluncheer/.ebextensions/03_archive_cron.config
@@ -6,7 +6,8 @@ files:
         content: |
             #!/bin/bash
             source /var/app/venv/*/bin/activate
-            python3 /var/app/current/manage.py archive_opportunities
+            cd /var/app/current
+            python3 manage.py archive_opportunities
 
     /etc/cron.d/archive_opps_cron:
         mode: "000644"
@@ -17,5 +18,5 @@ files:
 
 commands:
   rm_old_cron:
-    command: "rm -fr /etc/cron.d/*.bak"
+    command: "rm -fr /etc/cron.d/archive_opps_cron.bak"
     ignoreErrors: true
