Added django env to config file

--- a/voluncheer/.ebextensions/03_archive_cron.config
+++ b/voluncheer/.ebextensions/03_archive_cron.config
@@ -20,3 +20,8 @@ commands:
   rm_old_cron:
     command: "rm -fr /etc/cron.d/archive_opps_cron.bak"
     ignoreErrors: true
+
+option_settings:
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_SETTINGS_MODULE: voluncheer.settings
+    PYTHONPATH: "/var/app/current:$PYTHONPATH"
