--- a/voluncheer/.ebextensions/03_archive_cron.config
+++ b/voluncheer/.ebextensions/03_archive_cron.config
@@ -5,6 +5,8 @@ files:
         group: root
         content: |
             #!/bin/bash
+            export DJANGO_SETTINGS_MODULE=voluncheer.settings
+            export PYTHONPATH=/var/app/current:$PYTHONPATH
             source /var/app/venv/*/bin/activate
             cd /var/app/current
             python3 manage.py archive_opportunities
