--- a/voluncheer/.ebextensions/03_archive_cron.config
+++ b/voluncheer/.ebextensions/03_archive_cron.config
@@ -5,10 +5,9 @@ files:
         group: root
         content: |
             #!/bin/bash
-            export DJANGO_SETTINGS_MODULE=voluncheer.settings
-            export PYTHONPATH=/var/app/current:$PYTHONPATH
             source /var/app/venv/*/bin/activate
             cd /var/app/current
+            export $(cat /opt/elasticbeanstalk/deployment/env | xargs)
             python3 manage.py archive_opportunities
 
     /etc/cron.d/archive_opps_cron:
@@ -18,7 +17,9 @@ files:
         content: |
             */10 * * * * root /usr/local/bin/archive_opps_script.sh
 
-commands:
+container_commands:
   rm_old_cron:
     command: "rm -fr /etc/cron.d/archive_opps_cron.bak"
     ignoreErrors: true
+  add_cron_job:
+    command: " */10 * * * * root /usr/local/bin/archive_opps_script.sh "
