Deleted unnecessary container commands

--- a/voluncheer/.ebextensions/03_archive_cron.config
+++ b/voluncheer/.ebextensions/03_archive_cron.config
@@ -17,9 +17,8 @@ files:
         content: |
             */10 * * * * root /usr/local/bin/archive_opps_script.sh
 
-container_commands:
+commands:
   rm_old_cron:
     command: "rm -fr /etc/cron.d/archive_opps_cron.bak"
     ignoreErrors: true
-  add_cron_job:
-    command: " */10 * * * * root /usr/local/bin/archive_opps_script.sh "
+
